revert sonar issue